[gd_scene load_steps=12 format=2]

[ext_resource path="res://Actors/Player/Scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Actors/Player/Scripts/PlayerStateMachine.gd" type="Script" id=2]
[ext_resource path="res://Actors/Player/Scripts/States/Idle.gd" type="Script" id=3]
[ext_resource path="res://Actors/Player/Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Actors/Player/Scripts/States/Moving.gd" type="Script" id=5]
[ext_resource path="res://Utils/Scenes/DirectionController.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.937255, 0.192157, 0.192157, 1 )

[sub_resource type="CapsuleShape" id=3]
height = 3.0

[sub_resource type="ProceduralSky" id=4]

[sub_resource type="Environment" id=5]
background_mode = 3
background_sky = SubResource( 4 )
background_color = Color( 0.12549, 0.113725, 0.113725, 1 )
background_energy = 1.5
ambient_light_color = Color( 0.937255, 0.913725, 0.827451, 1 )

[node name="Player" type="KinematicBody"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 4 )

[node name="DirectionController" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.07302e-07 )

[node name="Pivot" type="Spatial" parent="."]

[node name="Body" type="MeshInstance" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 2.5, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="RayCast" type="RayCast" parent="Pivot/Body"]
transform = Transform( 1, 0, 0, 0, -1, -2.06632e-07, 0, 2.06632e-07, -1, 0, -1.5, 2.38419e-07 )
enabled = true
cast_to = Vector3( 0, 10, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 2.5, 0 )
shape = SubResource( 3 )

[node name="PlayerController" type="Node" parent="."]
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, -0.40558, 0.579228, 0, 0.819152, 0.573577, -0.707107, -0.40558, 0.579228, 18.1484, 26.2657, 17.4594 )
environment = SubResource( 5 )
current = true
size = 25.0
near = 0.01
far = 150.0
[connection signal="direction_pressed" from="DirectionController" to="." method="_on_DirectionController_direction_pressed"]
